# pytorch-ml-study

./: README.md  main.py  pyproject.toml
03_linear_regression/: 03-01_linear_regression.py
05_softmax_regression/: 05_01_one_hot_encoding.md  05_02_softmax_regression.md
06_artificial_neural_network/: 06_01_ML_basic_concepts.ipynb  06_01_perceptron.ipynb  06_03_XOR_implementation.ipynb  06_04_BackPropagation.ipynb  06_05_MLP_Implementation.ipynb  06_06_MLP_MNIST.ipynb
linear_regression/: 03-02_multiple_linear_regression.py  03-03_linear_regression_with_nn.Module_implementation.py  03-04_mini_batch_and_dataloader.py  03-05_vectors_and_matrix.py
logistic_regression/: 04-01_logistic_regression.py  04-02_logistic_regression_with_nn.module.py
softmax_regression/: 05_03_softmax_regression_implementation.ipynb  05_04_mnist_classification_using_softmax.ipynb
