[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jpype1",
    "jupyter>=1.1.1",
    "konlpy>=0.6.0",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.uv.sources]
jpype1 = { path = "jpype1-1.5.2-cp312-cp312-win_amd64.whl" }
